<resources>
    <string name="app_name">AppmHelp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_name">Login</string>
    <string name="conectar_name">Conectar</string>
    <string name="senha_name">Senha</string>
    <string name="usuario_name">Usuário</string>
    <string name="title_activity_medico">Médico</string>
    <string name="enviar_msg">Enviar Mensagem</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="cadastrar_name">Cadastrar</string>
    <string name="medico_name">Médico</string>
    <string name="paciente_name">Paciente</string>
    <string name="crm_name">CRM</string>
    <string name="nome_name">Nome</string>
    <string name="email_name">Email</string>
    <string name="title_activity_paciente">PacienteActivity</string>
    <string name="nova_ocorrencia_name">Nova Ocorrência</string>
    <string name="prontuario_name">Prontuário</string>
    <string name="alterar_dados_name">Alterar dados</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_altera_dados">AlteraDadosActivity</string>
    <string name="endereco_name">Endereço</string>
    <string name="telefone_name">Telefone</string>
    <string name="logoff_name">Logoff</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_actitivity_login">Login</string>
    <string name="adicionar_paciente_name">Adicionar Paciente</string>
    <string name="adicionar_medico_name">Adicionar Médico</string>
    <string name="title_activity_adicionar_medico">AdicionarMedicoActivity</string>
    <string name="prompt_qrcode_paciente">Peça para o seu médico escanear este código</string>
    <string name="title_activity_adicionar_paciente">Adicionar Paciente</string>
    <string name="title_activity_list_pacientes">ListPacientesActivity</string>
    <string name="pacientes_name">Pacientes</string>
    <string name="resposta_sim">Sim</string>
    <string name="resposta_nao">Não</string>
    <string name="title_activity_prontuario">Prontuário</string>
    <string name="nome_do_paciente_name">Nome do Paciente</string>
    <string name="idade_name">Idade</string>
    <string name="sexo_name">Sexo</string>
    <string name="tipo_sanguineo_name">Tipo Sanguíneo</string>
    <string name="nome_da_mae_name">Nome da Mãe</string>
    <string name="data_de_nascimento_name">Data de Nascimento</string>
    <string name="nome_do_pai_name">Nome do Pai</string>
    <string name="estado_civil_name">Estado Civil</string>
    <string name="telefone_do_responsavel_name">Telefone do Responsável</string>
    <string name="observacoes_name">Observações</string>
    <string name="alterar_name">Alterar</string>
    <string name="alterar_prontuario_name">Alterar Prontuário</string>
    <string name="cadastrar_cids_name">Cadastrar Cids</string>
    <string name="cadastrar_medicamentos_name">Cadastrar Medicamentos</string>
    <string name="title_activity_cid">CidActivity</string>
    <string name="cid_name">Cid</string>
    <string name="descricao_name">Descrição</string>
    <string name="cids_name">Cids</string>
    <string name="adicionar_cids_name">Adicionar Cids</string>
    <string name="cids_do_paciente">Cids do paciente</string>
    <string name="cid_not_found_name">Não existem cids cadastrados para esse paciente</string>
    <string name="medicamento_name">Medicamento</string>
    <string name="doses_name">Doses</string>
    <string name="title_activity_medicamento">Medicamentos</string>
    <string name="adicionar_medicamentos_name">Adicionar Medicamentos</string>
    <string name="medicamentos_do_paciente_name">Medicamentos do Paciente</string>
    <string name="medicamento_not_found_name">Não existem medicamentos cadastrados para esse paciente</string>
    <string name="conexao_xmpp_notification_title">Você está conectado
    </string>
    <string name="ocorrencia_name">Ocorrência</string>
    <string name="ultima_mensagem_name">Última Mensagem</string>
    <string name="title_activity_nova_ocorrencia">Nova Ocorrência</string>
    <string name="titulo_name">Título</string>
    <string name="enviar_ocorrencia_name">Enviar Ocorrência</string>
    <string name="title_activity_mensagens">Mensagens</string>
    <string name="offline_name">Offline</string>
    <string name="online_name">Online</string>

    <string name="message_notification_title_template">Message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="action_anexo">Anexo</string>
    <string name="imagem_action">Imagem</string>
    <string name="video_action">Vídeo</string>
    <string name="title_activity_anexo">AnexoActivity</string>
</resources>
