<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nova_ocorrencia"
            android:icon="@drawable/ic_nova_ocorrencia"
            android:title="@string/nova_ocorrencia_name" />

        <item
            android:id="@+id/nav_prontuario"
            android:icon="@drawable/ic_prontuario"
            android:title="@string/prontuario_name" />

        <item
            android:id="@+id/nav_alterar_dados"
            android:icon="@drawable/ic_atualizar"
            android:title="@string/alterar_dados_name" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logoff_paciente"
            android:icon="@drawable/ic_cancel"
            android:title="@string/logoff_name" />
    </group>



</menu>
