<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ifma.appmhelp.views.ProntuarioActivity"
    tools:showIn="@layout/activity_prontuario">

<LinearLayout
    android:id="@+id/content_prontuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/nome_do_paciente_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/txtNomePacienteProntuario"
        android:textSize="18sp" />

    <TextView
        android:text="@string/idade_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtIdadeProntuario" />

    <EditText
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="3"
        android:maxLength="3"
        android:id="@+id/edIdadeProntuario" />

    <TextView
        android:text="@string/data_de_nascimento_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtDataDeNascimentoProntuario" />

    <EditText
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/edDataDeNascimentoProntuario" />

    <TextView
        android:text="@string/sexo_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtSexoProntuario" />

    <Spinner
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:id="@+id/spSexoProntuario" />

    <TextView
        android:text="@string/estado_civil_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtEstadoCivilProntuario" />

    <Spinner
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:id="@+id/spEstadoCivilProntuario" />

    <TextView
        android:text="@string/endereco_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtEnderecoProntuario" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textAutoComplete"
        android:ems="10"
        android:id="@+id/edEnderecoProntuario" />

    <TextView
        android:text="@string/tipo_sanguineo_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTipoSanguineoProntuario" />

    <Spinner
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:id="@+id/spTipoSanguineoProntuario" />

    <TextView
        android:text="@string/nome_da_mae_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtNomeDaMaeProntuario" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textAutoComplete"
        android:ems="10"
        android:id="@+id/edNomeDaMaeProntuario" />

    <TextView
        android:text="@string/nome_do_pai_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtNomeDoPaiProntuario" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textAutoComplete"
        android:ems="10"
        android:id="@+id/edNomeDoPaiProntuario" />

    <TextView
        android:text="@string/telefone_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTelefonePacienteProntuario" />

    <EditText
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/edTelefonePacienteProntuario" />

    <TextView
        android:text="@string/telefone_do_responsavel_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTelefoneResponsavelProntuario" />

    <EditText
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/edTelefoneResponsavelProntuario" />

    <TextView
        android:text="@string/observacoes_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtObservacoesProntuario" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textCapSentences|textMultiLine"
        android:ems="10"
        android:maxLines="4"
        android:id="@+id/edObservacoesProntuario" />



</LinearLayout>

</ScrollView>
