<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ifma.appmhelp.views.CadastroActivity"
    tools:showIn="@layout/activity_cadastro">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edNomeCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_name"
            android:inputType="textAutoComplete"
            android:maxLines="1"
            android:imeOptions="actionNext"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edEmailCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_name"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edUsuarioCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario_name"
            android:inputType="textAutoComplete"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edSenhaCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha_name"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="Tipo de Usuário"
        android:textSize="8pt"
        android:layout_marginTop="20px"
        android:layout_marginLeft="8px"
        android:layout_marginBottom="20px"/>

     <RadioGroup
        android:id="@+id/rGroupCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:onClick="onClickRadioGroupCadastro">

         <RadioButton
             android:id="@+id/radioPaciente"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/paciente_name"/>

        <RadioButton
            android:id="@+id/radioMedico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medico_name"
            />
    </RadioGroup>

    <Button
        android:id="@+id/btnCadastrar"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cadastrar_name"
        android:textStyle="bold"
        android:onClick="cadastrar"/>

</LinearLayout>
