<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ifma.appmhelp.views.AlteraMedicoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edNomeMedico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_name"
                android:inputType="textAutoComplete"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edCRM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/crm_name"
                android:inputType="textAutoComplete"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edEmailMedico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_name"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnAlterarMedico"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/alterar_dados_name"
            android:textStyle="bold"
            android:onClick="alterar"/>


    </LinearLayout>

</FrameLayout>
