<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_cid"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ifma.appmhelp.views.CidActivity"
    tools:showIn="@layout/activity_cid"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="9pt"
            android:text="@string/cids_do_paciente"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:id="@+id/txtCidNotFound"
            android:text="@string/cid_not_found_name"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rViewCidsCadastrados"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="158dp" >

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="9pt"
            android:paddingTop="10pt"
            android:text="@string/adicionar_cids_name"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:paddingBottom="2pt"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edCidCodigo"
                    android:layout_width="93dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/cid_name"
                    android:inputType="textAutoComplete"
                    android:imeOptions="actionDone"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edCidDescricao"
                    android:layout_width="273dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/descricao_name"
                    android:inputType="textAutoComplete"
                    android:imeOptions="actionDone"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rViewCids"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>
</ScrollView>

