<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewCid"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="@string/paciente_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtNomePacienteList"
                    android:textSize="20sp" />

                <TextView
                    android:text="@string/endereco_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtEnderecoPacienteList"
                    android:textSize="13sp" />

                <TextView
                    android:text="@string/telefone_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtTelefonePacienteList"
                    android:textSize="13sp" />

            </LinearLayout>

        </RelativeLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>
